[tool.poetry]
name = "tanks-server"
version = "0.1.0"
description = "Server for simple multiplayer tank game."
authors = ["Tyson Liddell <tysonliddell@yelp.com>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
websockets = "^12.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.1"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
